--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.2.4",
     "@tanstack/react-query": "^5.66.0",
     "@wagmi/core": "^2.16.4",
     "axios": "^1.8.1",
@@ -16,7 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
+    "framer-motion": "^12.4.10",
     "next": "15.1.6",
+    "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.0.1",
