--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
     "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.4.10",
+    "i18next": "^24.2.2",
     "next": "15.1.6",
+    "next-i18next": "^15.4.2",
+    "next-intl": "^3.26.5",
     "pino-pretty": "^13.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.4.1",
     "tailwind-merge": "^3.0.1",
     "viem": "^2.23.1",
     "wagmi": "^2.14.11"
